# GCMAMBOX

./: .gitignore  .gitmodules  README.md  pyproject.toml
dashboard/: mam_dashboard.py
run/: gcmambox  namelist
src/: CMakeLists.MOSAIC.txt  CMakeLists.STD.txt  CMakeLists.txt  README_CMAKE.md  abortutils.F90  buffer.F90  cloudchem_simple.F90  config.cmake.template  config.cmakeSAV  constituents.F90  driver.F90  error_function.F90  gaschem_simple.F90  mam_utils.F90  modal_aero_amicphys.F90  modal_aero_calcsize.F90  modal_aero_coag.F90  modal_aero_data.F90  modal_aero_gasaerexch.F90  modal_aero_initialize_data.F90  modal_aero_newnuc.F90  modal_aero_rename.F90  modal_aero_wateruptake.F90  module_data_mosaic_aero.F90  module_data_mosaic_asecthp.F90  module_data_mosaic_main.F90  module_mosaic_astem.F90  module_mosaic_box_aerchem.F90  module_mosaic_cam_init.F90  module_mosaic_ext.F90  module_mosaic_init_aerpar.F90  module_mosaic_support.F90  physconst.F90  physics_buffer.F90  physics_types.F90  pmgrid.F90  ppgrid.F90  rad_constituents.F90  radconstants.F90  wv_saturation.F90
