[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dash>=3.3.0",
    "matplotlib>=3.9.4",
    "netcdf4>=1.7.2",
    "numpy>=2.0.2",
    "plotly>=6.5.0",
    "xarray>=2024.7.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ipython>=8.18.1",
    "ruff>=0.14.8",
]


[tool.ruff.lint]
# E501: line too long - let the formatter worry about this
ignore = [
  "E501",
]
select = [
  "B", # bugbear
  "F", # pyflakes
  "E", # pycodestyle - errors
  "W", # pycodestyle - warnings
  "I", # isort
  "TID", # flake8-tidy-imports (absolute imports)
  "UP", # pyupgrade
]


